force-app/main/default/objects/ConsolBill__c/ConsolBill__c.object-meta.xml
<CustomObject>
    <label>Billing</label>
    <nameField>
        <displayFormat>MC-{000000}</displayFormat>
        <label>Billing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>