force-app/main/default/objects/ConsolBill__c/fields/AdvancePaymentonbehalfofourCompany__c.field-meta.xml
<CustomField>
    <fullName>AdvancePaymentonbehalfofourCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advance Payment on behalf of our Company</label>
    <type>Checkbox</type>
</CustomField>