force-app/main/default/objects/ConsolBill__c/fields/Agent_Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Credit_Date__c</fullName>
    <label>Agent Credit Date</label>
    <type>Date</type>
</CustomField>