force-app/main/default/objects/ConsolBill__c/fields/AllocationStatus__c.field-meta.xml
<CustomField>
    <fullName>AllocationStatus__c</fullName>
    <label>Allocation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Processed</fullName>
            </value>
            <value>
                <fullName>Processing Requested</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>