force-app/main/default/objects/ConsolBill__c/fields/Amount_Tax_Selling_FCY__c.field-meta.xml
<CustomField>
    <fullName>Amount_Tax_Selling_FCY__c</fullName>
    <formula>if (  Tax_Included_Selling__c = FALSE,  Quantity__c *  UnitPriceofSellingFCY__c *  TaxRatioSelling__c  , (Quantity__c * UnitPriceofSellingFCY__c * TaxRatioSelling__c)/ (1+TaxRatioSelling__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Tax Selling (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>