force-app/main/default/objects/ConsolBill__c/fields/Amount_Tax_Selling_Local__c.field-meta.xml
<CustomField>
    <fullName>Amount_Tax_Selling_Local__c</fullName>
    <formula>if (  Tax_Included_Selling__c = FALSE,  Quantity__c *   UnitPriceofSellingLocal__c *  TaxRatioSelling__c  , (Quantity__c * UnitPriceofSellingLocal__c * TaxRatioSelling__c)/ (1+TaxRatioSelling__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Tax Selling (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>