force-app/main/default/objects/ConsolBill__c/fields/AmountBuyingIncludingTaxActual__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingIncludingTaxActual__c</fullName>
    <formula>ROUND(TotalAmountofBuyingActual__c,3) +  ROUND(AmountofTaxBuyingActual__c,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Buying Including Tax (Actual)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>