force-app/main/default/objects/ConsolBill__c/fields/AmountBuyingIncludingTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingIncludingTaxFCY__c</fullName>
    <formula>ROUND(	TotalAmountofBuyingFCY__c,3) + ROUND(	AmountofTaxBuyingFCY__c ,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Buying Including Tax (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>