force-app/main/default/objects/ConsolBill__c/fields/AmountBuyingIncludingTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingIncludingTaxLocal__c</fullName>
    <formula>ROUND(TotalAmountofBuyingLocal__c,3) +  ROUND(AmountofTaxBuyingLocal__c,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Buying Including Tax (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>