force-app/main/default/objects/ConsolBill__c/fields/AmountofTaxBuyingActual__c.field-meta.xml
<CustomField>
    <fullName>AmountofTaxBuyingActual__c</fullName>
    <formula>if ( Tax_Included__c = FALSE, Quantity__c * UnitPriceofBuyingActual__c * TaxRatioBuying__c , Quantity__c * UnitPriceofBuyingActual__c - TotalAmountofBuyingActual__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Tax-Buying (Actual)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>