force-app/main/default/objects/ConsolBill__c/fields/AmountofTaxBuyingFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountofTaxBuyingFCY__c</fullName>
    <formula>if (  Tax_Included__c = FALSE,  Quantity__c *  UnitPriceofBuyingFCY__c  *  TaxRatioBuying__c , (Quantity__c * UnitPriceofBuyingFCY__c* TaxRatioBuying__c  )/ (1+TaxRatioBuying__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Tax-Buying (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>