force-app/main/default/objects/ConsolBill__c/fields/AmountofTaxBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountofTaxBuyingLocal__c</fullName>
    <formula>if ( Tax_Included__c = FALSE, Quantity__c *   UnitPriceofBuyingLocal__c * TaxRatioBuying__c , Quantity__c *   UnitPriceofBuyingLocal__c - TotalAmountofBuyingLocal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Tax-Buying (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>