force-app/main/default/objects/ConsolBill__c/fields/AmountPaidforCustomerActual__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidforCustomerActual__c</fullName>
    <label>Amount Paid-Buying (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>