force-app/main/default/objects/ConsolBill__c/fields/AmountPaidforCustomerFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidforCustomerFCY__c</fullName>
    <label>Amount Paid-Buying (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>