force-app/main/default/objects/ConsolBill__c/fields/AmountPaidforCustomerLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidforCustomerLocal__c</fullName>
    <label>Amount Paid-Buying (VND)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>