force-app/main/default/objects/ConsolBill__c/fields/AmountPaidSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidSellingUSD__c</fullName>
    <label>Amount Paid-Selling (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>