force-app/main/default/objects/ConsolBill__c/fields/AmountPaidSellingVND__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidSellingVND__c</fullName>
    <label>Amount Paid-Selling (VND)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>