force-app/main/default/objects/ConsolBill__c/fields/AmountReceivedfromCustomerActual__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedfromCustomerActual__c</fullName>
    <label>Amount Received from Customer (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>