force-app/main/default/objects/ConsolBill__c/fields/AmountReceivedfromCustomerFCY__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedfromCustomerFCY__c</fullName>
    <label>Amount Received from Customer (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>