force-app/main/default/objects/ConsolBill__c/fields/AmountReceivedfromCustomerLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedfromCustomerLocal__c</fullName>
    <label>Amount Received from Customer (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>