force-app/main/default/objects/ConsolBill__c/fields/AmountTaxSellingActual__c.field-meta.xml
<CustomField>
    <fullName>AmountTaxSellingActual__c</fullName>
    <formula>if ( Tax_Included_Selling__c = FALSE, Quantity__c * UnitPriceofSellingActual__c * TaxRatioSelling__c , (Quantity__c * UnitPriceofSellingActual__c * TaxRatioSelling__c)/ (1+TaxRatioSelling__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Tax Selling (Actual)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>