force-app/main/default/objects/ConsolBill__c/fields/ApplicantSelling__c.field-meta.xml
<CustomField>
    <fullName>ApplicantSelling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant-Selling</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Consol_Bills3</relationshipName>
    <type>Lookup</type>
</CustomField>