force-app/main/default/objects/ConsolBill__c/fields/Available_Amount_for_PR_USD__c.field-meta.xml
<CustomField>
    <fullName>Available_Amount_for_PR_USD__c</fullName>
    <formula>TotalBuyingInclTaxFCY__c - Requested_for_Payment_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Amount for PR (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>