force-app/main/default/objects/ConsolBill__c/fields/Available_Amount_for_RR_VND__c.field-meta.xml
<CustomField>
    <fullName>Available_Amount_for_RR_VND__c</fullName>
    <formula>TotalBuyingInclTaxLocal__c  - Requested_for_PaymentVND__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Amount for RR (VND)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>