force-app/main/default/objects/ConsolBill__c/fields/Available_for_deduction_USD__c.field-meta.xml
<CustomField>
    <fullName>Available_for_deduction_USD__c</fullName>
    <formula>Total_Selling_Incl_Tax_FCY__c - Request_for_Deduction_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available for deduction (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>