force-app/main/default/objects/ConsolBill__c/fields/Available_for_deduction_VND__c.field-meta.xml
<CustomField>
    <fullName>Available_for_deduction_VND__c</fullName>
    <formula>Total_Selling_Incl_Tax_Local__c - Request_for_Deduction_VND__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available for deduction (VND)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>