force-app/main/default/objects/ConsolBill__c/fields/BankAccountforPayment__c.field-meta.xml
<CustomField>
    <fullName>BankAccountforPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account for Payment</label>
    <referenceTo>BankAcc__c</referenceTo>
    <relationshipName>Consol_Bills1</relationshipName>
    <type>Lookup</type>
</CustomField>