force-app/main/default/objects/ConsolBill__c/fields/BankAccountforReceipt__c.field-meta.xml
<CustomField>
    <fullName>BankAccountforReceipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account for Receipt</label>
    <referenceTo>BankAcc__c</referenceTo>
    <relationshipName>Consol_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>