force-app/main/default/objects/ConsolBill__c/fields/BeneficiaryBuying__c.field-meta.xml
<CustomField>
    <fullName>BeneficiaryBuying__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary-Buying</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Consol_Bills2</relationshipName>
    <type>Lookup</type>
</CustomField>