force-app/main/default/objects/ConsolBill__c/fields/Billing_status__c.field-meta.xml
<CustomField>
    <fullName>Billing_status__c</fullName>
    <label>Billing status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <default>true</default>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>