force-app/main/default/objects/ConsolBill__c/fields/BillNameatPrintENG__c.field-meta.xml
<CustomField>
    <fullName>BillNameatPrintENG__c</fullName>
    <label>Bill Name at Print(ENG)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>