force-app/main/default/objects/ConsolBill__c/fields/BillNameatPrintLocal__c.field-meta.xml
<CustomField>
    <fullName>BillNameatPrintLocal__c</fullName>
    <label>Bill Name at Print(Local)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>