force-app/main/default/objects/ConsolBill__c/fields/COMMISSION__c.field-meta.xml
<CustomField>
    <fullName>COMMISSION__c</fullName>
    <label>COMMISSION</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>