force-app/main/default/objects/ConsolBill__c/fields/ConsolBillURL__c.field-meta.xml
<CustomField>
    <fullName>ConsolBillURL__c</fullName>
    <formula>HYPERLINK( SUBSTITUTE(&apos;https://tcl-02-dev-ed.develop.lightning.force.com/lightning/r/ConsolBill__c/a058d00000Ahv85AAB/view&apos;, &apos;a058d00000Ahv85AAB&apos;,  Id ) ,  Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consol Bill URL</label>
    <type>Text</type>
</CustomField>