force-app/main/default/objects/ConsolBill__c/fields/ConsolidationShipmentName__c.field-meta.xml
<CustomField>
    <fullName>ConsolidationShipmentName__c</fullName>
    <label>Consolidation Shipment Name</label>
    <referenceTo>AdvancedShipment__c</referenceTo>
    <relationshipName>Consol_Bills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>