force-app/main/default/objects/ConsolBill__c/fields/Cost_Allocation_Category__c.field-meta.xml
<CustomField>
    <fullName>Cost_Allocation_Category__c</fullName>
    <label>Cost Allocation Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Cost allocation</fullName>
            </value>
            <value>
                <fullName>Carrier Cost Allocation</fullName>
            </value>
            <value>
                <fullName>Warehouse Cost Allocation</fullName>
            </value>
            <value>
                <fullName>Carrier Cost Allocation(TAX)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>