force-app/main/default/objects/ConsolBill__c/fields/Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check__c</fullName>
    <formula>RIGHT ( InvNoonCreditfromCompany__c ,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Check</label>
    <type>Text</type>
</CustomField>