force-app/main/default/objects/ConsolBill__c/fields/Credit_No_from_Agent__c.field-meta.xml
<CustomField>
    <fullName>Credit_No_from_Agent__c</fullName>
    <inlineHelpText>Credit No on Credit form sent by Agent</inlineHelpText>
    <label>Credit No. from Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>