force-app/main/default/objects/ConsolBill__c/fields/CurrencyBuying__c.field-meta.xml
<CustomField>
    <fullName>CurrencyBuying__c</fullName>
    <label>Currency-Buying</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>