force-app/main/default/objects/ConsolBill__c/fields/CurrencyConversionforBuying__c.field-meta.xml
<CustomField>
    <fullName>CurrencyConversionforBuying__c</fullName>
    <label>Currency Conversion for Buying</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From FCY to Local Currency</fullName>
            </value>
            <value>
                <fullName>From FCY Currency to USD</fullName>
                <label>From Local Currency to FCY</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>