force-app/main/default/objects/ConsolBill__c/fields/CurrencyConversionForSelling__c.field-meta.xml
<CustomField>
    <fullName>CurrencyConversionForSelling__c</fullName>
    <label>Currency Conversion for Selling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From USD to Local Currency</fullName>
            </value>
            <value>
                <fullName>From Local Currency to USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>