force-app/main/default/objects/ConsolBill__c/fields/Date_on_Debit_note__c.field-meta.xml
<CustomField>
    <fullName>Date_on_Debit_note__c</fullName>
    <label>Date on Debit note</label>
    <type>Date</type>
</CustomField>