force-app/main/default/objects/ConsolBill__c/fields/Debit_check__c.field-meta.xml
<CustomField>
    <fullName>Debit_check__c</fullName>
    <formula>RIGHT ( Debit_No__c ,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debit check</label>
    <type>Text</type>
</CustomField>