force-app/main/default/objects/ConsolBill__c/fields/Debit_No__c.field-meta.xml
<CustomField>
    <fullName>Debit_No__c</fullName>
    <description>Display on ASAP&apos;s Debit Form in order to send to Customer</description>
    <inlineHelpText>Display on ASAP&apos;s Debit Form in order to send to Customer</inlineHelpText>
    <label>Debit No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>