force-app/main/default/objects/ConsolBill__c/fields/ExchangeRateSelling__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateSelling__c</fullName>
    <label>Exchange Rate - Selling (VND)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>