force-app/main/default/objects/ConsolBill__c/fields/Extra_cost__c.field-meta.xml
<CustomField>
    <fullName>Extra_cost__c</fullName>
    <formula>IF(PricingName__r.Extra_cost__c =TRUE, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extra cost</label>
    <type>Checkbox</type>
</CustomField>