force-app/main/default/objects/ConsolBill__c/fields/FTMSSO__c.field-meta.xml
<CustomField>
    <fullName>FTMSSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FTMSSO__c.ConsolidationID__c</field>
            <operation>equals</operation>
            <valueField>$Source.ConsolidationShipmentName__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FTMSSO__c</referenceTo>
    <relationshipLabel>Billings</relationshipLabel>
    <relationshipName>Consol_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>