force-app/main/default/objects/ConsolBill__c/fields/FxRateIDBuying__c.field-meta.xml
<CustomField>
    <fullName>FxRateIDBuying__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FxRate ID (Buying)</label>
    <referenceTo>FxRate__c</referenceTo>
    <relationshipLabel>Billings (FxRate ID (Buying))</relationshipLabel>
    <relationshipName>Consol_Bills1</relationshipName>
    <type>Lookup</type>
</CustomField>