force-app/main/default/objects/ConsolBill__c/fields/FxRateIDSelling__c.field-meta.xml
<CustomField>
    <fullName>FxRateIDSelling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FxRate ID (Selling)</label>
    <referenceTo>FxRate__c</referenceTo>
    <relationshipLabel>Billings (FxRate ID (Selling))</relationshipLabel>
    <relationshipName>Consol_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>