force-app/main/default/objects/ConsolBill__c/fields/HnttNhanttbuying__c.field-meta.xml
<CustomField>
    <fullName>HnttNhanttbuying__c</fullName>
    <label>Hạn tt:N(han_tt)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>