force-app/main/default/objects/ConsolBill__c/fields/InboundInvDate__c.field-meta.xml
<CustomField>
    <fullName>InboundInvDate__c</fullName>
    <label>Agent Debit Date</label>
    <type>Date</type>
</CustomField>