force-app/main/default/objects/ConsolBill__c/fields/InvNoonCreditfromCompany__c.field-meta.xml
<CustomField>
    <fullName>InvNoonCreditfromCompany__c</fullName>
    <inlineHelpText>Display on ASAP&apos;s Credit form</inlineHelpText>
    <label>Credit No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>