force-app/main/default/objects/ConsolBill__c/fields/Invoiceto__c.field-meta.xml
<CustomField>
    <fullName>Invoiceto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice to</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Consol_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>