force-app/main/default/objects/ConsolBill__c/fields/InvoicetoAgent__c.field-meta.xml
<CustomField>
    <fullName>InvoicetoAgent__c</fullName>
    <formula>IF (AND ((NOT(ISBLANK(Invoiceto__c  ))), OR (Invoiceto__c  = ConsolidationShipmentName__r.MAgent__c, Invoiceto__c   = ConsolidationShipmentName__r.Agent2nd__c)), TRUE, FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice to = Agent</label>
    <type>Checkbox</type>
</CustomField>