force-app/main/default/objects/ConsolBill__c/fields/InvoiceToFormula__c.field-meta.xml
<CustomField>
    <fullName>InvoiceToFormula__c</fullName>
    <formula>Invoiceto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice To</label>
    <type>Text</type>
</CustomField>