force-app/main/default/objects/ConsolBill__c/fields/JobIDURL__c.field-meta.xml
<CustomField>
    <fullName>JobIDURL__c</fullName>
    <formula>HYPERLINK( SUBSTITUTE(&apos;https://tcl-02-dev-ed.develop.lightning.force.com/lightning/r/AdvancedShipment__c/a008d00000GOIN4AAP/view&apos;, &apos;a008d00000GOIN4AAP&apos;,  ConsolidationShipmentName__r.Id )  ,  ConsolidationShipmentName__r.Name )</formula>
    <label>Job ID URL</label>
    <type>Text</type>
</CustomField>