force-app/main/default/objects/ConsolBill__c/fields/MasterBilling__c.field-meta.xml
<CustomField>
    <fullName>MasterBilling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Billing</label>
    <referenceTo>ConsolBill__c</referenceTo>
    <relationshipName>Consol_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>