force-app/main/default/objects/ConsolBill__c/fields/Mbphtmabphtibuying__c.field-meta.xml
<CustomField>
    <fullName>Mbphtmabphtibuying__c</fullName>
    <label>Mã bpht(ma_bpht_i)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>