force-app/main/default/objects/ConsolBill__c/fields/Mdnmavvibuying__c.field-meta.xml
<CustomField>
    <fullName>Mdnmavvibuying__c</fullName>
    <formula>PricingName__r.ServiceCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mã dự án(ma_vv_i)</label>
    <type>Text</type>
</CustomField>