force-app/main/default/objects/ConsolBill__c/fields/Mkhchmakhbuying__c.field-meta.xml
<CustomField>
    <fullName>Mkhchmakhbuying__c</fullName>
    <label>Mã khách (ma_kh)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>