force-app/main/default/objects/ConsolBill__c/fields/Mkttmathckbuying__c.field-meta.xml
<CustomField>
    <fullName>Mkttmathckbuying__c</fullName>
    <label>Mã đ/k tt(ma_thck)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>