force-app/main/default/objects/ConsolBill__c/fields/MMYY_Credit__c.field-meta.xml
<CustomField>
    <fullName>MMYY_Credit__c</fullName>
    <formula>LEFT( RIGHT( InvNoonCreditfromCompany__c , 8), 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MMYY-Credit</label>
    <type>Text</type>
</CustomField>